--- a/reservia.css
+++ b/reservia.css
@@ -20,7 +20,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
     box-sizing: border-box;
     line-height: 1;
-    padding: 14px;
+    padding: 30px;
 }
 
 ol, ul {
@@ -64,7 +64,7 @@ strong {
     grid-template-columns: auto 1fr;
     align-items: end;
     height: 70px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     margin-top: 5px;
 }
 
@@ -109,11 +109,11 @@ strong {
 }
 
 .reve {
-    margin-bottom: 35px;
+    margin-bottom: 10px;
 }
 
 .ville {
-    margin-bottom: 35px;
+    margin-bottom: 10px;
 }
 
 .input-search-container {
@@ -367,9 +367,10 @@ button>.text {
     grid-row-gap: 24px;
     background-color: #F2F2F2;
     border-radius: 10px;
-    padding: 40px 24px;
+    padding: 32px 24px;
     height: 800px;
 }
+
 
 .row {
     box-sizing: border-box;
@@ -378,6 +379,7 @@ button>.text {
     grid-column-gap: 24px;
     background-color: #F2F2F2;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .populaire {
@@ -424,8 +426,8 @@ strong {
 }
 
 .popular {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     width: 150px;
     height: 160px;
 }
@@ -478,7 +480,7 @@ strong {
 /*Activités à Marseille*/
 
 .activites {
-    height: 700px;
+    height: 570px;
     width: auto;
     margin: 45px 3.8% 0 1%;
     padding: 0;
@@ -607,10 +609,11 @@ footer a:hover {
 footer {
     background-color: #F2F2F2;
     margin: auto;
-    width: 100%;
+    width: auto;
     display: flex;
     justify-content: space-between;
     padding: 30px 3.8% 0 3.8%;
+    margin-bottom: 50px;
 }
 
 footer section {
@@ -619,7 +622,7 @@ footer section {
 }
 
 footer section h2 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-size: 1.2em;
 }
 
