--- a/reservia.css
+++ b/reservia.css
@@ -357,8 +357,9 @@ button>.text {
 .heberge {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    width: 440px;
+    width: 100%;
     height: 170px;
+    object-fit: cover;
 }
 
 .heberge:active {
@@ -495,7 +496,7 @@ strong {
 .activites {
     height: 570px;
     width: auto;
-    margin: 45px 3.8% 0 1%;
+    
     
 }
 
@@ -626,7 +627,7 @@ footer {
     display: flex;
     justify-content: space-between;
     padding: 30px 3.8% 0 3.8%;
-    margin-bottom: 50px;
+    
 }
 
 footer section {
