--- a/reservia.css
+++ b/reservia.css
@@ -372,7 +372,9 @@ button>.img:hover {
 .affiche{
     font-size: 30px;
 }
-
+.test{
+    display: none;
+}
 .heberge {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
