--- a/reservia.css
+++ b/reservia.css
@@ -372,6 +372,10 @@ button>.img:hover {
 .affiche{
     font-size: 30px;
 }
+.test{
+    visibility: hidden;
+    display: none;
+}
 .heberge {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
